active navigation links

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,4 @@
 @import "./styles/utils/base";
 @import "./styles/utils/normalize";
+@import "./styles/components/header";
+@import "./styles/components/navigation";
