--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @import "./styles/utils/normalize";
 @import "./styles/components/header";
 @import "./styles/components/navigation";
+@import "./styles/components/pageNotFound";
