add first components to Loan section

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,4 +2,5 @@
 @import "./styles/utils/normalize";
 @import "./styles/components/header";
 @import "./styles/components/navigation";
+@import "./styles/components/loan";
 @import "./styles/components/pageNotFound";
