--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,7 +6,7 @@ body {
 .header {
   max-width: 1200px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 27px auto;
 }
