--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -154,6 +154,6 @@ label.MuiFormControlLabel-labelPlacementStart {
   height: 16px;
 }
 
-.carCheckbox.Mui-checked + .car__form--model {
+.carCheckbox.Mui-checked + .MuiFormControlLabel-root.FormControlLabel {
   background-color: red;
 }
