--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -4,7 +4,6 @@
   margin: 0 auto 60px;
 
   &__title {
-    font-family: PT Root UI;
     font-style: normal;
     font-weight: bold;
     font-size: 64px;
@@ -20,7 +19,7 @@
 
   &__title {
     position: relative;
-    font-family: PT Root UI;
+
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
@@ -35,7 +34,7 @@
       height: 30px;
       width: 24px;
       left: -44px;
-      font-family: PT Root UI;
+
       font-style: normal;
       font-weight: bold;
       font-size: 24px;
@@ -45,7 +44,7 @@
 
   &__inputs {
     display: flex;
-    margin: 0;
+    margin: 0 0 60px;
   }
 }
 
@@ -53,9 +52,19 @@
   display: block;
   max-width: 378px;
   width: 100%;
+  margin-bottom: 60px;
 
   &__img {
     border-radius: 8px 8px 0px 0px;
+  }
+
+  &__count {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 160%;
+    color: #464646;
+    margin: 0 0 30px;
   }
 
   &__form {
@@ -67,7 +76,6 @@
     margin: 0;
 
     &--year {
-      font-family: PT Root UI;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -90,7 +98,7 @@
       display: flex;
       justify-content: space-between;
       margin: 0 0 5px;
-      font-family: PT Root UI;
+
       font-style: normal;
       font-weight: normal;
       line-height: 160%;
@@ -108,7 +116,7 @@
     &--protect {
       display: flex;
       justify-content: space-between;
-      font-family: PT Root UI;
+
       font-style: normal;
       font-weight: bold;
       line-height: 160%;
