Start to make information section + fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,4 @@
 @import "./styles/components/navigation";
 @import "./styles/components/loan";
 @import "./styles/components/pageNotFound";
+@import "./styles/components/information";
