--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -165,6 +165,7 @@ label.MuiFormControlLabel-labelPlacementStart {
 .calculator {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 50px;
 
   &__data {
     display: flex;
@@ -179,6 +180,22 @@ label.MuiFormControlLabel-labelPlacementStart {
     line-height: 160%;
     color: #8d8d8d;
   }
+
+  &__line {
+    position: relative;
+    display: block;
+    padding-bottom: 50px;
+
+    &:before {
+      position: absolute;
+      display: block;
+      content: "";
+      width: 100%;
+      height: 2px;
+      background: #d6d6d6;
+      border-radius: 30px;
+    }
+  }
 }
 
 p.css-d3wcwz-MuiTypography-root {
@@ -189,4 +206,32 @@ p.css-d3wcwz-MuiTypography-root {
   color: #07b1fd;
 
   margin-bottom: 25px;
+}
+
+.autoCost {
+  &__cost {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 160%;
+    color: #8d8d8d;
+    margin: 0 0 10px;
+  }
+
+  &__sum {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 160%;
+    color: #07b1fd;
+    margin: 0;
+  }
+
+  &__section {
+    display: flex;
+  }
+}
+
+.cost {
+  margin: 0 80px 0 0;
 }
