--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -235,3 +235,15 @@ p.css-d3wcwz-MuiTypography-root {
 .cost {
   margin: 0 80px 0 0;
 }
+
+.trusted {
+  margin: 60px 0 30px;
+  &__title {
+    font-family: PT Root UI;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 160%;
+    color: #2c2c2c;
+  }
+}
