Main section is ready

--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -247,3 +247,9 @@ p.css-d3wcwz-MuiTypography-root {
     color: #2c2c2c;
   }
 }
+
+.submit {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 25px 0 8px;
+}
