Add footer! Let's fix him!

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,4 @@
 @import "./styles/components/loan";
 @import "./styles/components/pageNotFound";
 @import "./styles/components/information";
+@import "./styles/components/footer"
