--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,21 +1,21 @@
 .footer {
-
-    
-    height: 93px;
-background-color: #334356;
-
-
+    display: block;
+    background: #334356;
+    padding-top: 34px;
+    padding-bottom: 34px;
 
     &__oferta {
-
-
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
     }
- 
+
     &__title {
         font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 160%;
-color: #BDBDBD;
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 160%;
+        color: #BDBDBD;
+        margin: 0;
     }
 }
