--- a/src/styles/components/_loan.scss
+++ b/src/styles/components/_loan.scss
@@ -48,6 +48,12 @@
   }
 }
 
+.car__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .car {
   display: block;
   max-width: 378px;
